# researchassistant

./: .gitignore  01_data.ipynb  README.md  faiss_index.idx  project.ipynb  pyproject.toml
notebooks/: 01_data.ipynb  project.ipynb
