[tool.poetry]
name = "researchassistant"
version = "0.1.0"
description = ""
authors = ["matildesaraiva <matildesaraiva99@gmal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
ipykernel = "^6.29.5"
openai = "^1.51.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
