[tool.poetry]
name = "researchassistant"
version = "0.1.0"
description = ""
authors = ["matildesaraiva <matildesaraiva99@gmal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
ipykernel = "^6.29.5"
openai = "^1.51.2"
pypdf2 = "^3.0.1"
sentence-transformers = "^3.2.0"
faiss-cpu = "^1.9.0"
python-dotenv = "^1.0.1"
streamlit = "^1.39.0"
langchain-community = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
