[tool.poetry]
name = "researchassistant"
version = "0.1.0"
description = ""
authors = ["matildesaraiva <matildesaraiva99@gmal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
ipykernel = "^6.29.5"
openai = "^1.51.2"
pypdf2 = "^3.0.1"
sentence-transformers = "^3.2.0"
faiss-cpu = "^1.9.0"
python-dotenv = "^1.0.1"
streamlit = "^1.39.0"
langchain-community = "^0.3.2"
embedchain = "^0.1.123"
langchain-openai = "^0.2.2"
weaviate-client = "^4.9.0"
pdfplumber = "^0.11.4"
langchain-text-splitters = "^0.3.0"
langchain-huggingface = "^0.1.0"
langchain-core = "^0.3.12"
unstructured = "^0.16.5"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
